--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -145,7 +145,7 @@ assert foo(50) == 42;
 
 \lnPitch{
   \begin{multicols}{2}
-  \includegraphics[width=.7\linewidth]{practices.png}
+  \includegraphics[width=.6\linewidth]{practices.png}
   \par\columnbreak\par
   ``We note an \ul{inconsistency}. A high percentage of the respondents
   felt that the testing in their organization was a systematic
@@ -178,7 +178,7 @@ assert foo(50) == 42;
   [Cem Kaner]
   {cem-kaner}
   {As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer \ul{obviously far} from release according to \ul{this measure}.}
-  {kaner2002}
+  {kaner2002lessons}
 
 \lnQuote
   [Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan]
