--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -34,7 +34,7 @@
   [Fred Brooks]
   {fred-brooks}
   {The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it.}
-  {brooks1982}
+  {brooks1978mythical}
 
 \lnQuote
   [Ward Cunningham]
