--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -99,6 +99,11 @@
   {The first rule of functions is that they should be \ul{small}. The second rule of functions is that they should be even \ul{smaller} than that.}
   {martin2008clean}
 
+\lnQuote
+  {hongyu-zhang}
+  {Our results show that LOC can be a useful indicator of software quality, and that we are able to build useful defect prediction models using LOC.}
+  {zhang2009investigation}
+
 \lnThought{It \ul{may} be wrong to measure productivity of a programmer by counting lines of code, but for the quality of code the LoC metric is a perfect indicator.}
 
 \lnPitch{
