--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -50,15 +50,16 @@
 \lnQuote
   [Thomas J. McCabe]
   {thomas-mccabe}
-  {Cyclomatic Complexity (CC) is a count of the number of decisions in the source code. The higher the count, the more complex the code. The formula is simple: \(C=E-N+2\).}
+  {Cyclomatic Complexity (CC) is a count of the \ul{number of decisions} in the source code. The higher the count, the more complex the code. The formula is simple: \(C=E-N+2\).}
   {mccabe1976complexity}
 
 \lnPitch{
   \pptBanner{What is the complexity of this program?}
   \pptPic{.5}{cc.png}\par
-  I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
+  I found this picture
+  \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
 
-\lnThought{CC may correlate with other metrics.}
+\lnThought{CC may correlate with other metrics, or may not.}
 
 \lnQuote
   [Gregory Seront]
