--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -261,7 +261,7 @@ int fibonacci(int n) {
 
 \lnPitch{\begin{multicols}{2}
 \includegraphics[width=\linewidth]{duas.png}\par
-{\scriptsize Source: \bibentry{frankl1997all}\par}
+\lnSource{frankl1997all}
 \par\columnbreak\par
 ``Mutation coverage is more effective than dua coverage for five subjects, dua coverage --- for two others, and there is no significant difference for the remaining two. \par A definition-use association (\ul{dua} is a triple \(d\), \(u\), \(v\), such that \(d\) is a node in the program's flow graph in which variable \(v\) is defined, \(u\) is a node or edge in which \(v\) is used, and there is a definition-clear path with respect to \(v\) from \(d\) to \(u\).''\par
 \end{multicols}}
