--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -36,13 +36,13 @@
 \lnPitch{
   \includegraphics[width=.8\linewidth]{error-density.png}
   \par
-  {\scriptsize Source: \bibentry{fagan1976design}\par}}
+  \lnSource{fagan1976design}}
 
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=\linewidth]{complexity.png}
   \par\columnbreak\par
   ``One \ul{surprising} result was that module \ul{size} did not account for error proneness. In fact, it was quite the contrary---the larger the module, the \ul{less} error prone it was. This was true even though the larger modules were more complex.''\par
-  {\scriptsize Source: \bibentry{basili1984software}\par}
+  \lnSource{basili1984software}
   \end{multicols}}
 
 \lnQuote
@@ -53,7 +53,7 @@
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=\linewidth]{dd.png}
   \par
-  {\scriptsize Source: \bibentry{ieee982}\par}
+  \lnSource{ieee982}
   \par\columnbreak\par
   ``This measure has a degree of \ul{indeterminism}. For example, a low value may indicate either a good process and a good product or it may indicate a bad process. If the value is low compared to similar past projects, the inspection process should be examined. If the inspection process is found to be adequate, it should then be concluded that the development process has resulted in a \ul{relatively defect-free} product.''
   \end{multicols}}
@@ -61,7 +61,7 @@
 \lnPitch{
   \includegraphics[width=.7\linewidth]{ieee-measures.png}
   \par
-  {\scriptsize Source: \bibentry{ieee982}\par}}
+  \lnSource{ieee982}}
 
 \plush{\pptBanner{39 Measures for Reliable Software}
   \begin{pptWide}{3}
@@ -137,14 +137,14 @@
   \includegraphics[width=\linewidth]{mttf.png}
   \par\columnbreak\par
   ``This means we should be very wary of attempts to equate fault densities with failure rates, as proposed for example by~\citet{jones1996pragmatics}. Although highly attractive in principle, such a model does not stand up to \ul{empirical} validation.''\par
-  {\scriptsize Source: \bibentry{fenton1999critique}\par}
+  \lnSource{fenton1999critique}
   \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=\linewidth]{fps.png}
   \par\columnbreak\par
   ``We already see defect density defined in terms of defects per \ul{function point}, and empirical studies are emerging that seem likely to be the basis for predictive models. For example, \citet{jones1991} reports the following bench-marking study, reportedly based on large amounts of data from different commercial sources.''\par
-  {\scriptsize Source: \bibentry{fenton1999critique}\par}
+  \lnSource{fenton1999critique}
   \end{multicols}}
 
 \lnQuote
@@ -292,7 +292,7 @@
   \end{enumerate}
   \end{pptWide}
   \par
-  {\scriptsize Source: \bibentry{radjenovic2013software}\par}}
+  \lnSource{radjenovic2013software}}
 
 \lnQuote
   [Xiao Yu]
@@ -303,7 +303,7 @@
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{predicting-methods.png}
   \par
-  {\scriptsize Source: \bibentry{yu2022predicting}\par}
+  \lnSource{yu2022predicting}
   \par\columnbreak\par
   ``Software testers want to not only know which software modules should be inspected first, but also evaluate the reliability and maintenance effort of each module. Therefore, they can first employ the historical data to construct a \ul{Defect Number Prediction} (DNP) model, then use the two trained models to predict the defective-proneness or the number of defects.''
   \end{multicols}}
