--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -56,14 +56,14 @@
   \includegraphics[width=\linewidth]{factors.png}
   \par\columnbreak\par
   ``If the inputs, outputs, or files are extra complicated, we add 5\%. Complex internal processing can add another 5\%. On-line functions and performance are addressed in other questions. The maximum adjustment possible is 50\%, expressed as \(\pm\)25\% so that the weighted summation is the average complexity.''\par
-  {\scriptsize Source: \bibentry{albrecht1979measuring}\par}
+  \lnSource{albrecht1979measuring}
   \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=\linewidth]{functions.png}
   \par\columnbreak\par
   ``In order to find the adjusted function point (AFP) value, the UFP (the raw function count weighted by the appropriate complexity shown in the Table) is multiplied by the VAF.''\par
-  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \lnSource{galorath2006software}
   \end{multicols}}
 
 \lnQuote
@@ -74,7 +74,7 @@
 \lnPitch{
   \pptPic{.95}{er-diagram.png}
   \par
-  {\scriptsize Source: \bibentry{chen1976entity}\par}}
+  \lnSource{chen1976entity}}
 
 \lnQuote
   {tom-demarco}
@@ -84,7 +84,7 @@
 \lnPitch{
   \pptPic{.75}{dfd.png}
   \par
-  {\scriptsize Source: \bibentry{demarco1978}\par}}
+  \lnSource{demarco1978}}
 
 \lnQuote
   {../17-function-points/sloc-vs-fps}
@@ -99,7 +99,7 @@
 \lnPitch{
   \pptPic{.95}{mk-ii.png}
   \par
-  {\scriptsize Source: \bibentry{symons1991software}\par}}
+  \lnSource{symons1991software}}
 
 \lnQuote
   {daniel-galorath}
@@ -110,7 +110,7 @@
   \includegraphics[width=\linewidth]{seer-fbs.png}
   \par\columnbreak\par
   ``SEER-FBS (``function-based sizing''), introduced in 1992, is consistent with IFPUG counting rules, but adds a sixth category (\ul{internal functions}) that allows users to account for highly algorithmic processes of systems such as real-time and embedded-type systems.''\par
-  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \lnSource{galorath2006software}
   \end{multicols}}
 
 \lnQuote
@@ -122,7 +122,7 @@
   \includegraphics[width=\linewidth]{loc-per-fp.png}
   \par\columnbreak\par
   ``\ul{Backfiring} is converting lines of code to function points by dividing the line count by a \ul{conversion ratio}. The author does not recommend backfiring as an approach to generating function points.''\par
-  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \lnSource{galorath2006software}
   \end{multicols}}
 
 \lnQuote
@@ -134,20 +134,20 @@
   \pptBanner{IFPUG Procedure}
   \includegraphics[width=\linewidth]{ifpug-procedure.png}
   \par
-  {\scriptsize Source: \bibentry{iso20926}\par}}
+  \lnSource{iso20926}}
 
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=\linewidth]{boundary.png}
   \par\columnbreak\par
   ``The application \ul{boundary} indicates the border between the \ul{software} being measured and the \ul{user}.''\par
-  {\scriptsize Source: \bibentry{iso20926}\par}
+  \lnSource{iso20926}
   \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{characteristics.png}
   \par\columnbreak\par
   ``The 14 general system \ul{characteristics} are summarized into the \ul{value adjustment factor} (VAF). When applied, the value adjustment factor adjusts the \ul{unadjusted function point count} \(\pm\)35 percent to produce the \ul{adjusted function point count}.''\par
-  {\scriptsize Source: \bibentry{iso20926}\par}
+  \lnSource{iso20926}
   \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
@@ -158,7 +158,7 @@
   UFP is the unadjusted function points for the functions that will be available after installation,
   and
   CFP is the unadjusted function points added by the conversion unadjusted function point count.''\par
-  {\scriptsize Source: \bibentry{iso20926}\par}
+  \lnSource{iso20926}
   \end{multicols}}
 
 \lnQuote
