--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -27,7 +27,7 @@
 
 \lnTitlePage{17}{24}{xt01nxxfAB0}
 
-\lnThought{We don't know how to estimate the size of the effort required to develop a software system.}
+\lnThought{We don't know how to estimate the effort required to develop a software system.}
 
 \lnQuote
   {fred-brooks}
